Change titles in templates. Add config parameter for Mailer Service. Set prod inviroment

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="{{ asset('assets/img/favicon.ico') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Welcome!{% endblock %} | ALTAI TRAVEL</title>
     {% block stylesheets %}
         <link href="{{ asset('assets/css/magnific-popup.css') }}" rel="stylesheet">
         <link href="{{ asset('assets/css/slick.css') }}" rel="stylesheet">
