--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Главная | ALTAI TRAVEL{% endblock %}
+{% block title %}Главная{% endblock %}
 {% block headerWrapClass %}main{% endblock %}
 {% block headerWaveWrapClass %}main{% endblock %}
 {% block headerContent %}
