--- a/templates/tour/index.html.twig
+++ b/templates/tour/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Туры | ALTAI TRAVEL{% endblock %}
+{% block title %}Туры{% endblock %}
 
 {% block content %}
 <!-- all-tours wrapper -->
