--- a/templates/tour/tour.html.twig
+++ b/templates/tour/tour.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Информация о туре | ALTAI TRAVEL{% endblock %}
+{% block title %}Информация о туре{% endblock %}
 
 {% block content %}
     <!-- Detail-info-header wrapper -->
