--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Мой аккаунт | ALTAI TRAVEL{% endblock %}
+{% block title %}Мой аккаунт{% endblock %}
 
 {% block content %}
     <div class="container">
